--- a/module_1/project/go/avro-example/config/consumer1.yaml
+++ b/module_1/project/go/avro-example/config/consumer1.yaml
@@ -3,6 +3,6 @@ kafka:
   kafkaUrl: "localhost:29092,localhost:39092,localhost:49092"
   schemaRegistryUrl: "http://localhost:8081"
   topic: "users"
-  type: "consumer-push"
+  type: "consumer-single"
   groupId: "group_1"
   timeout: 100
