--- a/module_1/project/go/avro-example/config/consumer2.yaml
+++ b/module_1/project/go/avro-example/config/consumer2.yaml
@@ -3,5 +3,5 @@ kafka:
   kafkaUrl: "localhost:29092,localhost:39092,localhost:49092"
   schemaRegistryUrl: "http://localhost:8081"
   topic: "users"
-  type: "consumer-pull"
+  type: "consumer-batch"
   groupId: "group_2"
